Bug 116421 - autosum is not working
Summary: autosum is not working
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0 target:7.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Function-Sum
  Show dependency treegraph
 
Reported: 2018-03-15 18:09 UTC by Xavier Van Wijmeersch
Modified: 2021-03-01 18:47 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xavier Van Wijmeersch 2018-03-15 18:09:20 UTC
Put some numbers in cells A1:A5
Select those cells and press the Σ icon next the input line
the only result is =sum(), a 0 value as total sum

Version: 6.1.0.0.alpha0+
Build ID: 4647057a077824cd6782be82b2d13e06fa76704b
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-03-13_00:16:40
Locale: nl-BE (en_US.UTF-8); Calc: group

Version: 6.1.0.0.alpha0+
Build ID: 953a5cb1c8c750df24ed0316349a5916c384296d
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group
Comment 1 Xisco Faulí 2018-03-16 01:29:45 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-03-07 14:17:38 +0200
committer	Eike Rathke <erack@redhat.com>	2018-03-10 19:22:01 +0100
commit 6529cd54c29c5800340530a1b8182c341fbeeafb (patch)
tree 2b09ee9429a0759b8104575aa97e1f4aeadd443e
parent 4ea605cb5c31fe4c7d3931a656782a652b4d96fc (diff)
don't use heap for elements in ScRangeList
no need to store small objects like this out of line.

Also
 - add move constructor and move assignment operator
 - drop Assign method since it now has the same
   signature as push_back

Bisected with: bibisect-linux64-6.1

Adding Cc: to Noel Grandin
Comment 2 Commit Notification 2018-03-19 13:52:16 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ec02d7ea1337df3adabe9ac91d4f506e3372c80

tdf#116421 autosum is not working

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xavier Van Wijmeersch 2018-03-20 14:39:23 UTC
tested and thanks its working again

Version: 6.1.0.0.alpha0+
Build ID: 43446fa03995fb5d1379fc0afbeec36c9dedfde2
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group
Comment 4 Commit Notification 2018-03-28 21:49:19 UTC
Zdeněk Crhonek committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=09d1353ece5d729d00c7952f640c3c7b94458509

uitests for bugs tdf#71339 tdf#116215 tdf#116421

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2021-03-01 18:47:24 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5d2cbd772da09c92b0cfc0d9424efceeee852862

tdf#116421: sc: move UItest to CppunitTest

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.