tdf#116421 autosum is not working

regression from
   commit 6529cd54c29c5800340530a1b8182c341fbeeafb
   don't use heap for elements in ScRangeList

The change in lcl_MoveRanges is not part of the fix, just something else
I noticed when reviewing the problematic commit

Change-Id: I958937f92a84f6e8e7bec607705c3a958d70ad3c
Reviewed-on: https://gerrit.libreoffice.org/51547
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>